diapositivas index.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Paso 1:</strong> Proyectar la <strong>Diapositiva 18</strong>: "¡Sesión 3: Dando Vida a Nuestro Arte!". Mostrar título, imagen (boceto convirtiéndose en algo animado/manos dibujando secuencia) y texto introductorio.
+                            <strong>Paso 1:</strong> Proyectar la <strong>Diapositiva 18</strong>. <em>Título:</em> "¡Sesión 3: Dando Vida a Nuestro Arte!"
                         </td>
                         <td>
                             "¡Artistas digitales, de vuelta para la Sesión 3! En la sesión pasada, cada uno eligió su 'idea estrella' ⭐ de arte interactivo con su pegatina dorada. ¡Fue genial ver tanta creatividad!"
@@ -160,7 +160,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Paso 1:</strong> Proyectar la <strong>Diapositiva 19</strong>: "¡Nivel 5! ¿Qué Pasa Si...? - ¡Descubriendo la Magia Interactiva!". Mostrar título, instrucción con preguntas/respuestas, iconos (❓❗), imagen de mano interactuando con dibujo.
+                            <strong>Paso 1:</strong> Proyectar la <strong>Diapositiva 19</strong>. <em>Título:</em> "¡Nivel 5! ¿Qué Pasa Si...? - ¡Descubriendo la Magia Interactiva!"
                         </td>
                         <td>
                             "¡Muy bien! Ya tienen la idea de arte de su equipo. Ahora, ¡vamos a descubrir su magia interactiva con la táctica '¿Qué Pasa Si...?'! Vamos a jugar a ser los primeros usuarios de su obra de arte."
@@ -182,7 +182,7 @@
                     </tr>
                      <tr>
                         <td>
-                           <strong>Paso 3:</strong> Proyectar la <strong>Diapositiva 20</strong>: "¡Interacción de Voices for Change!". Mostrar los ejemplos de preguntas/respuestas con dibujos/descripciones como guía.
+                           <strong>Paso 3:</strong> Proyectar la <strong>Diapositiva 20</strong>. <em>Título:</em> "¡Interacción de Voices for Change!"
                         </td>
                         <td>
                             "¡Ahora venía una parte súper divertida! Los creadores de 'Voices for Change' ya tenían su idea favorita: el Paisaje Geométrico. Pero se preguntaron: '¿Qué Pasa Si...?' ¡Jugaron a ser exploradores dentro de su propia idea! Hicieron preguntas como si fueran ustedes jugando:"
@@ -207,7 +207,7 @@
                     </tr>
                      <tr>
                          <td>
-                            <strong>Paso 4:</strong> Concluir la actividad. Marcar el entregable parcial.
+                            <strong>Paso 4:</strong> Concluir la actividad.
                          </td>
                         <td>
                             "¡Excelente! Ya tienen más claro cómo funcionará la magia de su arte."
@@ -232,7 +232,7 @@
                     </tr>
                     <tr>
                         <td>
-                             <strong>Paso 1:</strong> Proyectar la <strong>Diapositiva 21</strong>: "¡Nivel 6! Mi Arte en Acción - ¡La Historia en 3 Dibujos!". Mostrar título, instrucción y las 3 escenas (ANTES, ACCIÓN, DESPUÉS) con los ejemplos de Voice of Change. Entregar hojas/plantillas de storyboard.
+                             <strong>Paso 1:</strong> Proyectar la <strong>Diapositiva 21</strong>. <em>Título:</em> "¡Nivel 6! Mi Arte en Acción - ¡La Historia en 3 Dibujos!" Entregar hojas/plantillas de storyboard.
                         </td>
                         <td>
                             "¡Genial! Ya saben qué pasa cuando alguien interactúa con su arte. Ahora, ¡vamos a contar esa historia en 3 dibujos con la táctica 'Mi Arte en Acción'! Es como hacer una mini-película de su interacción."
@@ -258,7 +258,7 @@
                     </tr>
                      <tr>
                         <td>
-                            <strong>Paso 2:</strong> Concluir la actividad. Marcar el entregable.
+                            <strong>Paso 2:</strong> Concluir la actividad.
                         </td>
                          <td>
                             "¡Fantástico! ¡Ya tienen la película de su arte interactivo!"
@@ -283,7 +283,7 @@
                     </tr>
                     <tr>
                         <td>
-                             <strong>Paso 1:</strong> Facilitar una ronda rápida de presentación de storyboards. Proyectar <strong>Diapositiva 22</strong> (opcional, puede ser genérica de cierre o sin diapositiva).
+                             <strong>Paso 1:</strong> Facilitar una ronda rápida de presentación de storyboards. Proyectar <strong>Diapositiva 22</strong>.
                         </td>
                         <td>
                             "¡Tiempo! ¡Increíbles historias interactivas en 3 pasos! Vamos a hacer una ronda súper rápida. Cada equipo, muestre su storyboard y cuéntennos en una frase: ¿Qué pasa en su arte interactivo?"
